Added more entities

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -13,6 +13,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
     properties:
       hibernate:
         globally_quoted_identifiers: true
