--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
+    "html5-qrcode": "^2.3.8",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
