--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "html5-qrcode": "^2.3.8",
     "pinia": "^2.1.7",
+    "qr-code-styling": "^1.6.0-rc.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
