Addead a Feather Icons in the frontend

--- a/client/package.json
+++ b/client/package.json
@@ -14,16 +14,21 @@
   },
   "dependencies": {
     "@vitejs/plugin-basic-ssl": "^1.1.0",
+    "feather-icons": "4",
     "html5-qrcode": "^2.3.8",
     "pinia": "^2.1.7",
     "qr-code-styling": "^1.6.0-rc.1",
-    "vue": "^3.4.21",
+    "vue": "3",
+    "vue-feather": "2",
+    "vue-feather-icons": "^5.1.0",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/feather-icons": "^4",
     "@types/node": "^20.12.5",
+    "@types/vue-feather-icons": "^5",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
