Add CI Checks Github workflows

--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
     "lint:fix": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "prettier": "prettier --check src/",
+    "prettier:fix": "prettier --write src/"
   },
   "dependencies": {
     "@vitejs/plugin-basic-ssl": "^1.1.0",
