--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-basic-ssl": "^1.1.0",
+    "@vueuse/core": "^10.11.0",
     "feather-icons": "4",
     "html5-qrcode": "^2.3.8",
     "pinia": "^2.1.7",
