--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "prettier:fix": "prettier --write src/"
   },
   "dependencies": {
+    "@fontsource-variable/rubik": "^5.0.22",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "@vueuse/core": "^10.11.0",
     "feather-icons": "4",
