Deshaciendo cambio en .env

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 VITE_GOOGLE_OAUTH=https://accounts.google.com/o/oauth2/v2/auth
 VITE_GOOGLE_CLIENT_ID=470401541816-35t7onpn3ger6dbe5b6q8dph6o78t4rf.apps.googleusercontent.com
-VITE_SERVER_ENDPOINT=http://192.168.1.32:8080
+VITE_SERVER_ENDPOINT=http://localhost:8080
